syntax = "proto3";

package transport_catalogue_serialize;

import "graph.proto";

message RoutingSettings {
    double bus_wait_time = 1;
    double bus_velocity = 2;
}

message TransportRouter {
    RoutingSettings routing_settings = 1;
    Router router = 2;
}
